// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Label hidden renders 1`] = `
<label
  className="dIyRSI"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
  hidden={true}
/>
`;

exports[`Label Label nowrap renders 1`] = `
<label
  className="eRXOGb"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
/>
`;

exports[`Label it renders 1`] = `
<label
  className="hhMuky"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
/>
`;
